# multiplatform_googletest

./: .gitmodules  build_common_ios.sh  build_googletest_for_ios.sh
common/: CMakeLists.txt
common/test_code/: CMakeLists.txt
common/test_code/src/cpp/: tests.cpp
ios/testapp/: AppDelegate.swift  ViewController.swift  call_gtest.cpp  call_gtest.hpp  testapp-Bridging-Header.h
ios/testapp.xcodeproj/: project.pbxproj
ios/testapp.xcodeproj/project.xcworkspace/xcuserdata/mac.xcuserdatad/: UserInterfaceState.xcuserstate
ios/testappTests/: testappTests.swift
ios/testappUITests/: testappUITests.swift
